--- a/assignments/assignment2/Neural Network.ipynb
+++ b/assignments/assignment2/Neural Network.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def prepare_for_neural_network(train_X, test_X):\n",
@@ -90,11 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement ReLULayer layer in layers.py\n",
     "# Note: you'll need to copy implementation of the gradient_check function from the previous assignment\n",
@@ -119,9 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n",
+      "Gradient check passed!\n",
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement FullyConnected layer forward and backward methods\n",
     "assert check_layer_gradient(FullyConnectedLayer(3, 4), X)\n",
@@ -143,9 +165,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking gradient for W_first_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for B_first_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for W_second_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for B_second_layer\n",
+      "Gradient check passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO: In model.py, implement compute_loss_and_gradients function\n",
     "model = TwoLayerNet(n_input = train_X.shape[1], n_output = 10, hidden_layer_size = 3, reg = 0)\n",
@@ -164,9 +213,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking gradient for W_first_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for B_first_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for W_second_layer\n",
+      "Gradient check passed!\n",
+      "Checking gradient for B_second_layer\n",
+      "Gradient check passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# TODO Now implement l2 regularization in the forward and backward pass\n",
     "model_with_reg = TwoLayerNet(n_input = train_X.shape[1], n_output = 10, hidden_layer_size = 3, reg = 1e1)\n",
@@ -467,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
