--- a/assignments/assignment2/PyTorch.ipynb
+++ b/assignments/assignment2/PyTorch.ipynb
@@ -366,53 +366,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Добавьте уменьшение скорости обучения по ходу тренировки."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average loss: 1.335433, Train accuracy: 0.563970, Val accuracy: 0.693127\n",
-      "Average loss: 0.954003, Train accuracy: 0.700713, Val accuracy: 0.726572\n",
-      "Average loss: 0.835344, Train accuracy: 0.738423, Val accuracy: 0.736127\n",
-      "Average loss: 0.768166, Train accuracy: 0.760997, Val accuracy: 0.770801\n",
-      "Average loss: 0.729567, Train accuracy: 0.772276, Val accuracy: 0.787045\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Learning rate annealing\n",
-    "# Reduce your learning rate 2x every 2 epochs\n",
-    "# Hint: look up learning rate schedulers in PyTorch. You might need to extend train_model function a little bit too!\n",
-    "\n",
-    "nn_model = nn.Sequential(\n",
-    "    Flattener(),\n",
-    "    nn.Linear(3*32*32, 100),\n",
-    "    nn.BatchNorm1d(100),\n",
-    "    nn.ReLU(inplace=True),\n",
-    "    nn.Linear(100, 100),\n",
-    "    nn.BatchNorm1d(100),\n",
-    "    nn.ReLU(inplace=True),\n",
-    "    nn.Linear(100, 10)\n",
-    "         )\n",
-    "\n",
-    "optimizer = optim.SGD(nn_model.parameters(), lr=1e-1, weight_decay=1e-3)\n",
-    "sch=torch.optim.lr_scheduler.StepLR(optimizer, 2)\n",
-    "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, optimizer, 5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Визуализируем ошибки модели\n",
     "\n",
     "Попробуем посмотреть, на каких изображениях наша модель ошибается.\n",
@@ -822,10 +775,9 @@
     "\n",
     "num_epochs = 30\n",
     "optimizer = optim.SGD(nn_model.parameters(), lr=1e-3, weight_decay=1e-1, momentum=0.8)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -929,10 +881,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-5, weight_decay=1e-1)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1067,10 +1018,9 @@
     "\n",
     "num_epochs = 60  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-5, weight_decay=1e-1)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1172,10 +1122,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1284,10 +1233,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1389,10 +1337,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1499,10 +1446,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "#scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1609,10 +1555,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1723,10 +1668,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1815,10 +1759,9 @@
     "\n",
     "num_epochs = 15  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -1929,10 +1872,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2043,10 +1985,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=1e-8)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2179,10 +2120,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=1e-8)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2301,10 +2241,9 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=0.0008, weight_decay=1e-7)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2423,7 +2362,6 @@
     "\n",
     "num_epochs = 30  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=0.0008, weight_decay=1e-5)\n",
-    "\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
     "                                                       optimizer, num_epochs)"
@@ -2582,10 +2520,9 @@
     "\n",
     "num_epochs = 60  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2734,10 +2671,9 @@
     "\n",
     "num_epochs = 60  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-4, weight_decay=1e-2)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -2886,10 +2822,9 @@
     "\n",
     "num_epochs = 60  # was increased the epochs number yet\n",
     "optimizer = optim.Adam(nn_model.parameters(), lr=1e-3, weight_decay=0)\n",
-    "scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.5)  # add sheduler\n",
     "\n",
     "loss_history, train_history, val_history = train_model(nn_model, train_loader, val_loader, loss, \n",
-    "                                                       optimizer, num_epochs, scheduler=None)"
+    "                                                       optimizer, num_epochs)"
    ]
   },
   {
@@ -3197,7 +3132,15 @@
       "Average loss: 0.867443, Train accuracy: 0.756612, Val accuracy: 0.755034\n",
       "Average loss: 0.773405, Train accuracy: 0.781661, Val accuracy: 0.786226\n",
       "Average loss: 0.710951, Train accuracy: 0.795209, Val accuracy: 0.796942\n",
-      "Average loss: 0.669493, Train accuracy: 0.806846, Val accuracy: 0.800560\n"
+      "Average loss: 0.669493, Train accuracy: 0.806846, Val accuracy: 0.800560\n",
+      "Average loss: 0.640037, Train accuracy: 0.813449, Val accuracy: 0.812026\n",
+      "Average loss: 0.609829, Train accuracy: 0.822424, Val accuracy: 0.802403\n",
+      "Average loss: 0.595386, Train accuracy: 0.827100, Val accuracy: 0.800423\n",
+      "Average loss: 0.577613, Train accuracy: 0.831877, Val accuracy: 0.816122\n",
+      "Average loss: 0.565985, Train accuracy: 0.835938, Val accuracy: 0.820627\n",
+      "Average loss: 0.554006, Train accuracy: 0.839231, Val accuracy: 0.807044\n",
+      "Average loss: 0.540825, Train accuracy: 0.843190, Val accuracy: 0.834892\n",
+      "Average loss: 0.527449, Train accuracy: 0.848514, Val accuracy: 0.814211\n"
      ]
     }
    ],
